samples/_failures_safe/1761710498_a13bd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c58fe82.c: In function ‘main’:
./samples/SAFE/__tmp_9c58fe82.c:162:12: error: missing terminating " character
  162 |     printf("\nToken stream:\
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9c58fe82.c:162:5: error: expected expression at end of input
  162 |     printf("\nToken stream:\
      |     ^~~~~~
./samples/SAFE/__tmp_9c58fe82.c:162:5: error: expected declaration or statement at end of input
